--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,10 @@
 .DS_Store
 .idea
 .vscode
+dist
 node_modules
 docs/dist
-example/dist
+demo/dist
 .history
 package-lock.json
 build/private.wxadeafd8c77f7d641.key
