--- a/package.json
+++ b/package.json
@@ -6,12 +6,20 @@
   "repository": "https://github.com/milfun/tcui.git",
   "author": "MilFun",
   "license": "MIT",
-
   "scripts": {
+    "dev": "node build/dev.js",
+    "build:lib": "yarn && npx gulp -f build/gulp.js --series buildEs buildLib",
     "upload": "node build/upload.js"
   },
-
   "dependencies": {
-    "miniprogram-ci": "^1.0.76"
+    "gulp": "^4.0.2",
+    "gulp-insert": "^0.5.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.1.0",
+    "miniprogram-api-typings": "^3.0.2",
+    "miniprogram-ci": "^1.0.76",
+    "typescript": "^3.8.0"
   }
 }
